RascunhoGramatica.txt
PORTUGOL: INICIO
INICIO: DECLARACAO | Fim
DECLARACAO: varType ':' nomeVariavel CODE		//poder declarar varias variaveis!

-----

CODE: CONDICAO | CICLO | ATRIBUICAO | IO | € | Fim
ATRIBUICAO: varType assign VALUE ';' CODE

CONDICAO: se VALUE_LOG CODE GATE_SENAO
GATE_SENAO: fim_se CODE | SENAO
SENAO: senao CODE fim_se CODE

CICLO: FOR | WHILE
FOR: para ATRIBUICAO ate valorNumero faca CODE fim_para 
WHILE: enquanto VALUE_LOG entao CODE fim_enquanto
I/O: ...

----

VALUE_NUM: VALUE_NUM_AUX | VALUE_NUM_AUX SINAL VALUE_NUM
VALUE_NUM_AUX: valorNumero | nomeVariavel

VALUE_STR: VALUE_STR_AUX | VALUE_STR_AUX SINAL VALUE_STR
VALUE_STR_AUX: valorString | nomeVariavel

VALUE_LOG_BOOL: VALUE_LOG_BOOL_AUX | VALUE_LOG_BOOL_AUX SINAL_BOOL_LOG VALUE_LOG_BOOL		//checkar se esta tudo bem!
VALUE_LOG_BOOL_AUX: VALUE_LOG_BOOL_AUX2 | not VALUE_LOG_BOOL_AUX2 | nomeVariavel		//checkar se esta tudo bem!
VALUE_LOG_BOOL_AUX2: true | false		//checkar se esta tudo bem!
SINAL_BOOL_LOG: = | and | or | xor		//checkar se esta tudo bem!









TO DO:
VALUE_NUM
VALUE_STR
VALUE_LOG
I/O

























CODE: code2 | fim

CODE2 : atribuiçao | condiçao | ciclo | I_O

CONDICAO: se exp entao: code3 fim_se

CODE3 : code2 | code2 code4 | code4 

CODE4 : senao: code2 fim_se | senao_se exp: code2 fim_se
